[tool.poetry]
name = "ruralturbot"
version = "0.1.0"
description = ""
authors = ["yarolys <lysov.yaroslav.r@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.17.0"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
attrs = "24.3.0"
certifi = "2024.12.14"
frozenlist = "1.5.0"
idna = "3.10"
magic-filter = "1.0.12"
multidict = "6.1.0"
propcache = "0.2.1"
pydantic = "2.10.5"
pydantic-core = "2.27.2"
typing-extensions = "4.12.2"
yarl = "1.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
