[tool.poetry]
name = "ruralturbot"
version = "0.1.0"
description = ""
authors = ["yarolys <lysov.yaroslav.r@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.17.0"
loguru = "0.7.3"
python-dotenv = "1.0.1"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
attrs = "24.3.0"
certifi = "2024.12.14"
frozenlist = "1.5.0"
idna = "3.10"
magic-filter = "1.0.12"
multidict = "6.1.0"
propcache = "0.2.1"
pydantic = "2.10.5"
pydantic-core = "2.27.2"
typing-extensions = "4.12.2"
yarl = "1.18.3"
sqlalchemy = "2.0.37"
aiosqlite = "0.21.0"
asyncpg = "0.30.0"
alembic = "1.14.1"
poetry = "2.0.1"
build = "1.2.2.post1"
cachecontrol = "0.14.2"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
crashtest = "0.4.1"
cryptography = "44.0.0"
distlib = "0.3.9"
dulwich = "0.22.7"
fastjsonschema = "2.21.1"
filelock = "3.17.0"
greenlet = "3.1.1"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jeepney = "0.8.0"
keyring = "25.6.0"
mako = "1.3.8"
markupsafe = "3.0.2"
more-itertools = "10.6.0"
msgpack = "1.1.0"
packaging = "24.2"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry-core = "2.0.1"
pycparser = "2.22"
pyproject-hooks = "1.2.0"
rapidfuzz = "3.12.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
tomlkit = "0.13.2"
trove-classifiers = "2025.1.15.22"
urllib3 = "2.3.0"
virtualenv = "20.29.1"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
